test/expected/explain_rf_i.out
explain int (&f)()
            ^
13: error: reference to function is illegal
